--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,11 @@ diadump changelog
 =================
 
 
+Unreleased
+----------
+* Убрано засыпание в ходе пакетной обработки
+
+
 v0.1.0
 ------
 + Basic functionality.
