--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@ diadump changelog
 
 Unreleased
 ----------
+* Более информативный вывод в консоль.
 * Убрано засыпание в ходе пакетной обработки
 
 
