Пропуск загрузки ранее загруженных фильмов.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,11 @@ diadump changelog
 =================
 
 
+Unreleased
+----------
++ Пропуск загрузки ранее загруженных фильмов.
+
+
 v0.1.1
 ------
 * Более информативный вывод в консоль.
